base/ingresses.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins
spec:
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
